@@ -104,6 +104,8 @@ module Options = Main_args.Make_optcomp_options (struct
   let _o s = output_name := Some s
   let _open s = open_modules := s :: !open_modules
   let _output_obj = set output_c_object
+  let _output_complete_obj s =
+    set output_c_object s; set output_complete_object s
   let _p = set gprofile
   let _pack = set make_package
   let _pp s = preprocessor := Some s
