@@ -98,14 +98,22 @@ type link_mode =
   | MainDll
   | Partial
 
+let remove_Wl cclibs =
+  cclibs |> List.map (fun cclib ->
+    (* -Wl,-foo,bar -> -foo bar *)
+    if String.length cclib >= 4 && "-Wl," = String.sub cclib 0 4 then
+      String.map (function ',' -> ' ' | c -> c)
+                 (String.sub cclib 4 (String.length cclib - 4))
+    else cclib)
+
 let call_linker mode output_name files extra =
-  let files = quote_files files in
   let cmd =
     if mode = Partial then
-      Printf.sprintf "%s%s %s %s"
+      Printf.sprintf "%s%s %s %s %s"
         Config.native_pack_linker
         (Filename.quote output_name)
-        files
+        (quote_prefixed "-L" !Config.load_path)
+        (quote_files (remove_Wl files))
         extra
     else
       Printf.sprintf "%s -o %s %s %s %s %s %s %s"
@@ -121,7 +129,7 @@ let call_linker mode output_name files extra =
         ""  (*(Clflags.std_include_flag "-I")*)
         (quote_prefixed "-L" !Config.load_path)
         (String.concat " " (List.rev !Clflags.all_ccopts))
-        files
+        (quote_files files)
         extra
   in
   command cmd = 0
