@@ -25,6 +25,7 @@ val link_everything : bool ref
 val custom_runtime : bool ref
 val bytecode_compatible_32 : bool ref
 val output_c_object : bool ref
+val output_complete_object : bool ref
 val all_ccopts : string list ref
 val classic : bool ref
 val nopervasives : bool ref
